--- a/kern/nelink/genl-hello/Makefile
+++ b/kern/nelink/genl-hello/Makefile
@@ -9,6 +9,6 @@ else
 all:
 	$(MAKE) -C $(KDIR) M=$(PWD)
 clean:
-	rm -rf *.o *.mod.c *.ko *.mod.o *.symvers *.order *-
+	rm -rf *.o *.mod.c *.ko *.mod.o *.symvers *.order *- .*.cmd *.out
 endif
 
